Change button__clear from div to button element. Add text 'Clear'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="button__rainbow">Rainbow</button>
         <button class="button__eraser">Eraser</button>
       </div>
-      <div class="button__clear"></div>
+      <button class="button__clear">Clear</button>
     </div>
   </body>
 </html>
