Refactor class names of control items. Add button to set square counts in grid. Add p element with class mode

--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
   </head>
   <body>
     <h1>Etch-A-Sketch</h1>
+    <button class="button__divCount">How many squares?</button>
+    <p class="mode"></p>
     <div class="grid-container"></div>
     <div class="controls-container">
       <div class="buttons">
-        <button class="button__color">Color</button>
-        <button class="button__rainbow">Rainbow</button>
-        <button class="button__eraser">Eraser</button>
+        <input class='control__item' type='color' id="colorPicker" value="#333333"></input>
+        <button  class='control__item' onclick="changeColor('rainbow')">
+          Rainbow
+        </button>
+        <button class='control__item' onclick="changeColor('white')">
+          Eraser
+        </button>
       </div>
-      <button class="button__clear">Clear</button>
+      <button class="control__item" onclick="initGrid()">Clear</button>
     </div>
+    <div class="footer">Made by klpabes99 😁</div>
   </body>
 </html>
